# context-os

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MEMORY.md  PROGRESS.md  README.md  docker-compose.yml  fly.toml  requirements.txt
.github/workflows/: docker-publish.yml  publish-pypi.yml
app/: config.py  database.py  limiter.py  logging_config.py  main.py
app/api/: admin.py  health.py  memory.py  sessions.py
app/extraction/: __init__.py  anthropic.py  base.py  embeddings.py  mock.py  openai.py
app/middleware/: auth.py
app/models/: fragment.py
app/schemas/: admin.py  memory.py  session.py
demo/: cross_app_demo.py
docs/: index.html
migrations/: 001_initial.sql  002_dead_letter.sql
migrations/alembic/: env.py
migrations/alembic/versions/: 17527735066b_initial_schema.py  c4f7a2e91d05_m5_fragment_versioning.py  e8b3d9f1a247_m5_fix_superseded_cascade.py
scripts/: seed_api_key.py
sdk/python/: README.md  pyproject.toml
sdk/python/contextos/: __init__.py  cli.py  client.py
sdk/python/contextos/server/: docker-compose.yml
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
tests/: test_smoke.py
