[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextos"
version = "0.1.0"
description = "Python SDK for ContextOS — model-agnostic memory infrastructure for LLM applications."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
contextos = "contextos.cli:main"

[project.urls]
Homepage = "https://github.com/surajvanv/contextos"
