[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextos"
version = "0.1.0"
description = "Cross-app personal memory for AI tools. Your Claude, GPT, and custom agents share one memory layer."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "ContextOS", email = "surajvanv@gmail.com" }
]
keywords = [
    "llm", "memory", "ai", "claude", "chatgpt", "agents",
    "cross-app", "personal-memory", "context", "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
contextos = "contextos.cli:main"

[project.urls]
Homepage = "https://github.com/bythebug/context-os"
Documentation = "https://bythebug.github.io/context-os/"
Repository = "https://github.com/bythebug/context-os"
"Bug Tracker" = "https://github.com/bythebug/context-os/issues"

[tool.hatch.build.targets.wheel]
packages = ["contextos"]

[tool.hatch.build.targets.wheel.force-include]
"contextos/server/docker-compose.yml" = "contextos/server/docker-compose.yml"
